# teach-ai-bot

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0e575c23dcca_initial.py
src/: config.py  main.py
src/admin/: app.py  auth.py  translations.py
src/admin/templates/sqladmin/: _macros.html  base.html  create.html  details.html  edit.html  layout.html  list.html  login.html
src/admin/templates/sqladmin/modals/: delete.html
src/ai/: client.py  fallback.py  prompts.py
src/bot/: commands.py  handlers.py  keyboards.py  middleware.py  payments.py
src/db/: models.py  repository.py  session.py
src/redis/: client.py  context.py  limits.py
src/services/: notification.py  rate_limiter.py  subscription.py
src/utils/: formatting.py  logger.py
tests/: conftest.py  test_ai.py  test_repository.py
